# v-simple-editor

./: .gitattributes  .gitignore  .graphifyignore  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  NLE_FEATURE_AUDIT.md  README.md  STUB_AUDIT.md  build.bat  setup.bat
.claude/: settings.json
.github/workflows/: selftest.yml
.omc/: PR_DESCRIPTION.md  prd_proext_sprint10_done.json
docs/: LIVE_HDR_VERIFICATION_CHECKLIST.md  REALFOOTAGE_VERIFICATION.md
docs/handoff/audit-wave2/: HANDOFF.md  finder_groups.json  known_findings.json  reference-impl-wave-workflow.js  story-pack-format-sample_US-105.json  verify_results.json
resources/: resources.qrc
scripts/: detect_gpu.ps1  realfootage_parity.sh
src/: AIHighlight.cpp  AIHighlight.h  AIMask.cpp  AIMask.h  AIMaskDialog.cpp  AIMaskDialog.h  AIProcessingDialog.cpp  AIProcessingDialog.h  AIUpscale.cpp  AIUpscale.h  AcesColor.cpp  AcesColor.h  AdjustmentLayer.cpp  AdjustmentLayer.h  AffinityPsdImporter.cpp  AnimatedExport.cpp  AscCdlExportDialog.cpp  AscCdlExportDialog.h  AspectReframer.cpp  AspectReframer.h  AudioBusPanel.cpp  AudioBusPanel.h  AudioBusRouting.cpp  AudioBusRouting.h  AudioClipEditor.cpp  AudioClipEditor.h  AudioEQ.cpp  AudioEQ.h  AudioMixer.cpp  AudioMixer.h  AudioRestoration.cpp  AudioRestoration.h  AudioRestorationDialog.cpp  AudioRestorationDialog.h  AutoClipDialog.cpp  AutoClipDialog.h  AutoClipGenerator.cpp  AutoClipGenerator.h  AutoColor.cpp  AutoColor.h  (+436 more)
src/audio/: AutoDucking.cpp  AutoDucking.h
src/clipanim/: ClipAnim.cpp  ClipAnim.h
src/color/: ClipColor.cpp  ClipColor.h  ClipColorTransform.cpp  ClipColorTransform.h  ClipOdt.cpp  ClipOdt.h  DvTimelineBuilder.cpp  DvTimelineBuilder.h  SwsColorParams.cpp  SwsColorParams.h
src/colorexport/: AscCdlExport.cpp  AscCdlExport.h
src/libavcore/: AudioExtract.cpp  AudioExtract.h  Concat.cpp  Concat.h  Decode.cpp  Decode.h  Encode.cpp  Encode.h  Probe.cpp  Probe.h  VideoFilterGraph.cpp  VideoFilterGraph.h
src/mask/: ClipMask.cpp  ClipMask.h
src/playback/: AudioPan.h  AutoProxyPolicy.cpp  AutoProxyPolicy.h  CompositeFrameCache.cpp  CompositeFrameCache.h  GpuCompositeMath.cpp  GpuCompositeMath.h  GpuLayerCompositor.cpp  GpuLayerCompositor.h  HdrCompositeMath.cpp  HdrCompositeMath.h  HdrIngestProbe.cpp  HdrIngestProbe.h  LiveMatteResolve.cpp  LiveMatteResolve.h  PixFmtDepth.cpp  PixFmtDepth.h  PlaybackQualityPolicy.cpp  PlaybackQualityPolicy.h  SnsFit.cpp  SnsFit.h  TlrCompose16.cpp  TlrCompose16.h  TrackMatteCompose16.cpp  TrackMatteCompose16.h  clipidt_flag.h  dvxml_flag.h  hdrexport16_flag.h  hdringest_flag.h  hdrmatte16_flag.h  hdroverlay_flag.h  idtgpu_flag.h  motionblur_flag.h  smartrender_flag.h  swsmatrix_flag.h
src/selftests/: AdjustmentLayerSelftest.cpp  AeFxBlurSelftest.cpp  AeFxColor2Selftest.cpp  AeFxColorSelftest.cpp  AeFxDistort2Selftest.cpp  AeFxDistortSelftest.cpp  AeFxGenerateSelftest.cpp  AeFxStylizeSelftest.cpp  AudioChannelMapSelftest.cpp  AutoColorSelftest.cpp  AutoDuckingSelftest.cpp  CapcutCaptionSelftest.cpp  ClipCurvesSelftest.cpp  ClipLutSelftest.cpp  ClipMaskSelftest.cpp  ColorMatchApplySelftest.cpp  EasingPresetsSelftest.cpp  EffectPresetSelftest.cpp  ExportRangeSelftest.cpp  FrameExportSelftest.cpp  FreezeFrameSelftest.cpp  GradeKeyframeSelftest.cpp  GradeLggSerializationSelftest.cpp  GradeWheelWiringSelftest.cpp  GraphEditorSelftest.cpp  HslSecondarySelftest.cpp  KeyframeLoopSelftest.cpp  LayerStyleSelftest.cpp  LayerStyleUiSelftest.cpp  LoudnessExportWireSelftest.cpp  MediaPoolDragSelftest.cpp  MotionBlurP2Selftest.cpp  MotionPresetSelftest.cpp  NestSequenceSelftest.cpp  PrecomposeE2ESelftest.cpp  RgbParadeSelftest.cpp  RightclickPausePrefSelftest.cpp  RippleDeleteSelftest.cpp  SelftestRegistry.cpp  SelftestRegistry.h  (+77 more)
src/util/: CrashHandler.cpp  CrashHandler.h  Logger.cpp  Logger.h  RcPause.h
test_assets/: s4_tint.cube
